feat(buildpack): add Railpack as a build pack option
