# openapi.yaml
@@ -81,7 +81,7 @@ paths:
                   description: 'The git branch.'
                 build_pack:
                   type: string
-                  enum: [nixpacks, static, dockerfile, dockercompose]
+                  enum: [nixpacks, railpack, static, dockerfile, dockercompose]
                   description: 'The build pack type.'
                 ports_exposes:
                   type: string
@@ -371,7 +371,7 @@ paths:
                   description: 'The destination UUID.'
                 build_pack:
                   type: string
-                  enum: [nixpacks, static, dockerfile, dockercompose]
+                  enum: [nixpacks, railpack, static, dockerfile, dockercompose]
                   description: 'The build pack type.'
                 name:
                   type: string
@@ -655,7 +655,7 @@ paths:
                   description: 'The destination UUID.'
                 build_pack:
                   type: string
-                  enum: [nixpacks, static, dockerfile, dockercompose]
+                  enum: [nixpacks, railpack, static, dockerfile, dockercompose]
                   description: 'The build pack type.'
                 name:
                   type: string
@@ -923,7 +923,7 @@ paths:
                   description: 'The Dockerfile content.'
                 build_pack:
                   type: string
-                  enum: [nixpacks, static, dockerfile, dockercompose]
+                  enum: [nixpacks, railpack, static, dockerfile, dockercompose]
                   description: 'The build pack type.'
                 ports_exposes:
                   type: string
@@ -1556,7 +1556,7 @@ paths:
                   description: 'The destination UUID.'
                 build_pack:
                   type: string
-                  enum: [nixpacks, static, dockerfile, dockercompose]
+                  enum: [nixpacks, railpack, static, dockerfile, dockercompose]
                   description: 'The build pack type.'
                 name:
                   type: string
@@ -7256,6 +7256,7 @@ components:
           description: 'Build pack.'
           enum:
             - nixpacks
+            - railpack
             - static
             - dockerfile
             - dockercompose
