# resources/views/livewire/project/new/github-private-repository.blade.php
@@ -77,6 +77,7 @@
                                         @endforeach
                                     </x-forms.select>
                                     <x-forms.select wire:model.live="build_pack" label="Build Pack" required>
+                                        <option value="railpack">Railpack</option>
                                         <option value="nixpacks">Nixpacks</option>
                                         <option value="static">Static</option>
                                         <option value="dockerfile">Dockerfile</option>
