# resources/views/livewire/project/new/public-git-repository.blade.php
@@ -41,6 +41,7 @@
                             helper="You can select other branches after configuration is done." />
                     @endif
                     <x-forms.select wire:model.live="build_pack" label="Build Pack" required>
+                        <option value="railpack">Railpack</option>
                         <option value="nixpacks">Nixpacks</option>
                         <option value="static">Static</option>
                         <option value="dockerfile">Dockerfile</option>
